--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h3> 
 <p align="right">	
 
-<a href="K:\e-sahayta\html pages\login.html">LogIn</a>	&nbsp&nbsp  
+<a href="https://github.com/kapil56/e--/blob/master/e-sahayta/html%20pages/login.html">LogIn</a>	&nbsp&nbsp  
 <a href="K:\e-sahayta\html pages\signup.html">SignUp</a>	&nbsp&nbsp 
 <a href="K:\e-sahayta\html pages\registration.html">Register NGO</a>	&nbsp&nbsp
 </p><br><br>
