--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
- <p>============ PRA Practice (Questions and Answers) ============
+ <pre>============ PRA Practice (Questions and Answers) ============
 
 1) Which is NOT the editions of Windows server 2012
 --> web
@@ -742,4 +742,4 @@ Q20. Name the topology in which all computers on the network can see all data tr
 Answer: Star Topology
 
 
-  ======================= THANK YOU =====================</p>
+  ======================= THANK YOU =====================</pre>
