--- a/index1.html
+++ b/index1.html
@@ -743,3 +743,6 @@ Answer: Star Topology
 
 
   ======================= THANK YOU =====================</pre>
+<center><!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7666766&style=0006&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a> <center>
