--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,7 @@
- <pre>============ PRA Practice (Questions and Answers) ============
+hits<br><!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7666766&style=0006&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a> 
+<br><pre>============ Anti-KU PRA ============
 
 1) Which is NOT the editions of Windows server 2012
 --> web
@@ -742,7 +745,5 @@ Q20. Name the topology in which all computers on the network can see all data tr
 Answer: Star Topology
 
 
-  ======================= THANK YOU =====================</pre>
-<center><!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=7666766&style=0006&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a> <center>
+  ======================= Anti-KU =====================</pre>
+
