--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,8 @@
+<html>
+   <head>
+      <script data-ad-client="ca-pub-8340944092298233" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+   </head>
+   <body>
 hits<br><!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7666766&style=0006&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a> 
@@ -746,4 +751,6 @@ Answer: Star Topology
 
 
   ======================= Anti-KU =====================</pre>
+   </body>
+</html>
 
