--- a/index1.html
+++ b/index1.html
@@ -751,6 +751,17 @@ Answer: Star Topology
 
 
   ======================= Anti-KU =====================</pre>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- test -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8340944092298233"
+     data-ad-slot="3904151100"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
    </body>
 </html>
 
