--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,18 @@
 hits<br><!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7666766&style=0006&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a> 
-<br><pre>============ Anti-KU PRA ============
+
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- test -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8340944092298233"
+     data-ad-slot="3904151100"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script><br><pre>============ Anti-KU PRA ============
 
 1) Which is NOT the editions of Windows server 2012
 --> web
