--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
    </head>
    <body>
       <script data-ad-client="ca-pub-8340944092298233" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-hits<br><!-- hitwebcounter Code START -->
+Cheaters visited<br><!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7666766&style=0006&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a> 
 
@@ -19,6 +19,7 @@ hits<br><!-- hitwebcounter Code START -->
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script><br><pre>============ Anti-KU PRA ============
+(#Your IP and MAC address is logged in our system, contact site owner for any assistance#)
 
 1) Which is NOT the editions of Windows server 2012
 --> web
