--- a/git.html
+++ b/git.html
@@ -1,4 +1,4 @@
-<p>
+<pre>
 '''
 NEURALNINE (c) 2019
 Stock Visualizer v0.1 Alpha
@@ -82,4 +82,4 @@ btn_visualize = Button(root, text="Visualize", command=visualize)
 btn_visualize.pack()
 
 root.mainloop()
-<p>
+<pre>
